# PokeApp

./: CMakeLists.txt
include/: Entraineur.hpp  Pokemon.hpp  Type.hpp
src/: load_func.cpp  main.cpp  pokemon_list.cpp
src/affichage/: fightschoicescreen.cpp  fightscreen.cpp  menuscreen.cpp  pokedec.cpp  statscreen.cpp  username.cpp  welcome.cpp
src/implementation/: Entraineur.cpp  Pokemon.cpp  Type.cpp
